finish up top-nav

--- a/src/app/public/dashboard/dashboard.component.scss
+++ b/src/app/public/dashboard/dashboard.component.scss
@@ -6,10 +6,10 @@
 }
 
 .top-nav-wrapper {
-  width: 95%;
+  // width: 95%;
   height: auto;
   margin: 0 auto;
-  padding: 0.5em .8em;
+  // padding: 0.5em .8em;
 }
 
 .shop-content-wrapper {
