minor changes in dasboard

--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -2,6 +2,9 @@
     <div class="top-nav-wrapper">
         <app-top-nav></app-top-nav>
     </div>
+    <div class="cover-box-wrapper">
+        <app-cover-box></app-cover-box>
+    </div>
     <div class="shop-content-wrapper">
         <div class="prod-list-wrapper col-lg-6">
             <div class="prod-list-header">
