--- a/src/app/public/cover-box/cover-box.component.html
+++ b/src/app/public/cover-box/cover-box.component.html
@@ -5,15 +5,12 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner" *ngFor="let path of cover_photos">
+        <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" [src]=path alt="First slide">
+                <img class="d-block w-100" [src]=cover_image alt="First slide">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" *ngFor="let path of cover_photos">
                 <img class="d-block w-100" [src]=path alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" [src]=path alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
