--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -5,26 +5,18 @@
     <div class="cover-box-wrapper">
         <app-cover-box></app-cover-box>
     </div>
-    <div class="shop-content-wrapper">
-        <div class="prod-list-wrapper col-lg-6">
-            <div class="prod-list-header">
-                <div class="header">
-                    <h1>Product List</h1>
-                    <div class="secondary-header">
-                        <p>List of all the products</p>
-                    </div>
-                </div>
-            </div>
+    <div class="movie-slot-wrapper">
+        <div class="slot-heading">
+            <span>Top Trending Movies</span>
+            <p>See More</p>
         </div>
-        <div class="price-list-wrapper col-lg-6">
-            <div class="price-list-header">
-                <div class="header">
-                    <h1>Pricing List</h1>
-                    <div class="secondary-header">
-                        <p>Pricing list of all the products</p>
-                    </div>
-                </div>
-            </div>
+        <app-movie-slot></app-movie-slot>
+    </div>
+    <div class="tvshow-slot-wrapper">
+        <div class="slot-heading">
+            <span>Top Trending TV Shows</span>
+            <p>See More</p>
         </div>
+        <app-tv-show-slot></app-tv-show-slot>
     </div>
 </div>
