--- a/src/app/public/cover-box/cover-box.component.scss
+++ b/src/app/public/cover-box/cover-box.component.scss
@@ -1,5 +1,5 @@
 .carousel-item {
-  height: 40em;
+  height: 32em;
 
   img {
     max-width: 100%;
@@ -7,6 +7,17 @@
     display: block;
   }
 }
+
 .carousel-inner {
-  height: 30em;
+  height: 30em !important;
+}
+
+.img-wrapper {
+  // height: 30em;
+
+  img {
+    width: 100%;
+    height: 40em;
+    //display: block;
+  }
 }
