--- a/src/app/public/dashboard/dashboard.component.scss
+++ b/src/app/public/dashboard/dashboard.component.scss
@@ -14,15 +14,22 @@
   // padding: 2em;
 }
 
+.tvshow-slot-wrapper {
+  padding: 2em;
+}
+
 .movie-slot-wrapper {
   padding: 2em;
 }
+
 .slot-heading {
   display: flex;
+
   span {
     font-size: 24px;
     color: white;
   }
+
   p {
     padding-left: 15px;
     color: #4F9FC6;
