--- a/src/app/public/movie-slot/movie-slot.component.html
+++ b/src/app/public/movie-slot/movie-slot.component.html
@@ -1,7 +1,13 @@
-<div class="movie-box">
-    <div class="card-wrapper">
-        <div class="card" *ngFor="let pic of cover_photos">
-            <img class="card-img-top" [src]=pic alt="Card image cap">
+<mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'"
+    [animation]="'slide'" [interval]=" '0' ">
+    <mdb-carousel-item *ngFor="let item of slides; let i = index">
+        <div class="row">
+            <div class="col-md-3" [ngClass]="{'d-none d-md-block': cardIndex !== 0}"
+                *ngFor="let card of item; let cardIndex = index">
+                <mdb-card class="my-1">
+                    <mdb-card-img [src]="card" alt="Card image cap img-add"></mdb-card-img>
+                </mdb-card>
+            </div>
         </div>
-    </div>
-</div>
+    </mdb-carousel-item>
+</mdb-carousel>
